test/conformance/chainsaw/tls-certificates/ecdsa-cert-manager/03-ca-issuer.yaml
# Issuer using the CA certificate for signing TLS certificates
apiVersion: cert-manager.io/v1
kind: Issuer
metadata:
  name: kyverno-ca-issuer
  namespace: kyverno
spec:
  ca:
    # Reference the CA secret created by the CA certificate
    secretName: kyverno-svc.kyverno.svc.kyverno-tls-ca
